--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.september_flutter_challenge">
    <application
-        android:label="september_flutter_challenge"
+        android:label="Challenge"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
